{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 62,
  "lineage": "d3da0fd7-063f-847e-8ed9-b07955f72a63",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:loadbalancer/app/applicationLB/bbd43e3d895661ae",
            "arn_suffix": "app/applicationLB/bbd43e3d895661ae",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "applicationLB-219382520.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:loadbalancer/app/applicationLB/bbd43e3d895661ae",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "applicationLB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01f6bbb956515b5ca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-062a2579d231bd737"
              },
              {
                "subnet_id": "subnet-0b6e21369e598302f"
              },
              {
                "subnet_id": "subnet-0c864e4615fbfa4fb"
              }
            ],
            "subnets": [
              "subnet-062a2579d231bd737",
              "subnet-0b6e21369e598302f",
              "subnet-0c864e4615fbfa4fb"
            ],
            "vpc_id": "vpc-076c3c0fe6d0dc6e7",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.loadbalancerSG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:listener/app/applicationLB/bbd43e3d895661ae/23185fef5bbc3f04",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group1/018f69de583bc35f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:listener/app/applicationLB/bbd43e3d895661ae/23185fef5bbc3f04",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:loadbalancer/app/applicationLB/bbd43e3d895661ae",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application-lb",
            "aws_lb_target_group.target_group",
            "aws_security_group.loadbalancerSG"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:listener/app/applicationLB/bbd43e3d895661ae/9ca8789afc4d7f4f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group2/430d64bb1d1413a2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:listener/app/applicationLB/bbd43e3d895661ae/9ca8789afc4d7f4f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:loadbalancer/app/applicationLB/bbd43e3d895661ae",
            "mutual_authentication": [],
            "port": 81,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application-lb",
            "aws_lb_target_group.target_group",
            "aws_security_group.loadbalancerSG"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:listener/app/applicationLB/bbd43e3d895661ae/ef0aaf95e348d867",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group3/73551e0f2e124ef5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:listener/app/applicationLB/bbd43e3d895661ae/ef0aaf95e348d867",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:loadbalancer/app/applicationLB/bbd43e3d895661ae",
            "mutual_authentication": [],
            "port": 83,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application-lb",
            "aws_lb_target_group.target_group",
            "aws_security_group.loadbalancerSG"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:listener/app/applicationLB/bbd43e3d895661ae/dc79ebaf921c1ebb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group4/8889002caf5b8a72",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:listener/app/applicationLB/bbd43e3d895661ae/dc79ebaf921c1ebb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:loadbalancer/app/applicationLB/bbd43e3d895661ae",
            "mutual_authentication": [],
            "port": 84,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application-lb",
            "aws_lb_target_group.target_group",
            "aws_security_group.loadbalancerSG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group1/018f69de583bc35f",
            "arn_suffix": "targetgroup/target-group1/018f69de583bc35f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/34095",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group1/018f69de583bc35f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-076c3c0fe6d0dc6e7"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group2/430d64bb1d1413a2",
            "arn_suffix": "targetgroup/target-group2/430d64bb1d1413a2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/34095",
                "port": "81",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group2/430d64bb1d1413a2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group2",
            "port": 81,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-076c3c0fe6d0dc6e7"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group3/73551e0f2e124ef5",
            "arn_suffix": "targetgroup/target-group3/73551e0f2e124ef5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/34095",
                "port": "83",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group3/73551e0f2e124ef5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group3",
            "port": 83,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-076c3c0fe6d0dc6e7"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group4/8889002caf5b8a72",
            "arn_suffix": "targetgroup/target-group4/8889002caf5b8a72",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/34095",
                "port": "84",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group4/8889002caf5b8a72",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group4",
            "port": 84,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-076c3c0fe6d0dc6e7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachments1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group1/018f69de583bc35f-20240221173338701600000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group1/018f69de583bc35f",
            "target_id": "172.31.14.213"
          },
          "dependencies": [
            "aws_lb_target_group.target_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group2/430d64bb1d1413a2-20240221173338760500000007",
            "port": 81,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group2/430d64bb1d1413a2",
            "target_id": "172.31.14.213"
          },
          "dependencies": [
            "aws_lb_target_group.target_group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group3/73551e0f2e124ef5-20240221173338704700000006",
            "port": 83,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group3/73551e0f2e124ef5",
            "target_id": "172.31.14.213"
          },
          "dependencies": [
            "aws_lb_target_group.target_group"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group4/8889002caf5b8a72-20240221173338689700000001",
            "port": 84,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group4/8889002caf5b8a72",
            "target_id": "172.31.14.213"
          },
          "dependencies": [
            "aws_lb_target_group.target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachments2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group1/018f69de583bc35f-20240221173338689700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group1/018f69de583bc35f",
            "target_id": "172.31.37.36"
          },
          "dependencies": [
            "aws_lb_target_group.target_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group2/430d64bb1d1413a2-20240221173338701600000003",
            "port": 81,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group2/430d64bb1d1413a2",
            "target_id": "172.31.37.36"
          },
          "dependencies": [
            "aws_lb_target_group.target_group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group3/73551e0f2e124ef5-20240221173338760500000008",
            "port": 83,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group3/73551e0f2e124ef5",
            "target_id": "172.31.37.36"
          },
          "dependencies": [
            "aws_lb_target_group.target_group"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group4/8889002caf5b8a72-20240221173338703000000005",
            "port": 84,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:533266968400:targetgroup/target-group4/8889002caf5b8a72",
            "target_id": "172.31.37.36"
          },
          "dependencies": [
            "aws_lb_target_group.target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancerSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533266968400:security-group/sg-01f6bbb956515b5ca",
            "description": "Load Balancer Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f6bbb956515b5ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "54.0.0.0/8",
                  "10.0.0.0/8"
                ],
                "description": "http inbound rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "54.0.0.0/8",
                  "10.0.0.0/8"
                ],
                "description": "http inbound rule",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "54.0.0.0/8",
                  "10.0.0.0/8"
                ],
                "description": "http inbound rule",
                "from_port": 83,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 83
              },
              {
                "cidr_blocks": [
                  "54.0.0.0/8",
                  "10.0.0.0/8"
                ],
                "description": "http inbound rule",
                "from_port": 84,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 84
              }
            ],
            "name": "loadbalancerSG1",
            "name_prefix": "",
            "owner_id": "533266968400",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-076c3c0fe6d0dc6e7"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}